structural change, added components
