# src/app/api/models/arrival.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Arrival {
+  at?: string;
+  iataCode?: string;
+  terminal?: string;
+}
