# src/app/api/models/dictionary.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Dictionary {
+  carriers?: {
+[key: string]: string;
+};
+}
