# src/app/api/models/flight-offer-dto.ts
@@ -1,0 +1,14 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface FlightOfferDto {
+  adults?: number;
+  children?: number;
+  currencyCode?: string;
+  departureDate?: string;
+  destinationLocationCode?: string;
+  max?: number;
+  nonStop?: boolean;
+  originLocationCode?: string;
+  returnDate?: string;
+  travelClass?: string;
+}
