# src/app/api/models/flight-offer-response.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+import { Data } from '../models/data';
+import { Dictionary } from '../models/dictionary';
+export interface FlightOfferResponse {
+  data?: Array<Data>;
+  dictionaries?: Dictionary;
+}
