# src/app/api/models/itinerary.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+import { Segment } from '../models/segment';
+export interface Itinerary {
+  duration?: string;
+  segments?: Array<Segment>;
+}
