# src/app/api/models/price.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Price {
+  base?: string;
+  currency?: string;
+  grandTotal?: string;
+  total?: string;
+}
